# agentic-data-analyst

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  README.md  app.py  config.py  dspy_init.py  makefile  pyproject.toml  requirements.txt
agentic_data_analyst.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/: business_communication_agent.py  deployment_agent.py  ml_advisor_agent.py  po_agent.py  profile_agent.py  quality_agent.py  schema_agent.py  supervisor.py
signatures/: dspy_signatures.py
tests/: test_imports.py
utils/: logger.py
